--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,23 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.main"
-    android:versionCode="1"
-    android:versionName="1.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.main" android:versionCode="1" android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="8" />
+    <uses-sdk android:minSdkVersion="8"/>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
-        <activity
-            android:name=".CanvasTestActivity"
-            android:label="@string/app_name" >
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+        <activity android:name=".CanvasActivity" android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-    </application>
+        
+        <activity android:name=".Store" android:label="@string/app_name">
+        </activity>
+    <service android:name="com.couchbase.android.CouchbaseService" android:enabled="true" android:exported="false"/></application>
 
-</manifest>
+<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/><uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/></manifest>
