--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -3,9 +3,10 @@
 
     <uses-sdk android:minSdkVersion="8"/>
     <uses-permission android:name="android.permission.INTERNET"/>
-    
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
+        <uses-library android:name="com.google.android.maps" />
         <activity android:name=".CanvasActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,6 +17,5 @@
         
         <activity android:name=".Store" android:label="@string/app_name">
         </activity>
-    <service android:name="com.couchbase.android.CouchbaseService" android:enabled="true" android:exported="false"/></application>
-
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/><uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/></manifest>
+        </application>
+</manifest>
