--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -1,23 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.main" android:versionCode="1" android:versionName="1.0">
-
-    <uses-sdk android:minSdkVersion="8"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name">
-        <uses-library android:name="com.google.android.maps" />
-        <activity android:name=".CanvasActivity" android:label="@string/app_name">
-            
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.main"
+    android:versionCode="1"
+    android:versionName="1.0" >
+    <uses-sdk android:minSdkVersion="8" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <application
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".CanvasActivity"
+            android:label="@string/app_name" >
         </activity>
-        <activity android:theme="@android:style/Theme.NoTitleBar" android:name=".HomeActivity" android:label="@string/app_name">
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:theme="@android:style/Theme.NoTitleBar"  android:name=".Store" android:label="@string/app_name">
+        <activity
+            android:name=".Store"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
-        </application>
+        <activity
+            android:name=".MainMenuActivity"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+    </application>
 </manifest>
