--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.main"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.1" >
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
     <application
@@ -31,6 +31,10 @@
             android:name=".MainMenuActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+         <activity
+            android:name=".OptionsActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 </manifest>
