--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.1" >
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
