--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-library android:name="com.google.android.maps" />
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
@@ -35,6 +36,10 @@
         </activity>
          <activity
             android:name=".OptionsActivity"
+            android:label="@string/app_name" >
+        </activity>
+         <activity
+            android:name=".MapsActivity"
             android:label="@string/app_name" >
         </activity>
     </application>
