--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -6,8 +6,9 @@
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-library android:name="com.google.android.maps" />
-    <application
+    
+    <application>
+    	<uses-library android:name="com.google.android.maps" />
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -40,7 +41,8 @@
         </activity>
          <activity
             android:name=".MapsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
     </application>
 </manifest>
