--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
     
     <application>
     	<uses-library android:name="com.google.android.maps" />
