--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -8,17 +8,17 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
-    
+      
     <application>
     	<uses-library android:name="com.google.android.maps" />
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
-            android:name=".CanvasActivity"
+            android:name="pt.drawgeo.main.CanvasActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name="pt.drawgeo.main.HomeActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
             <intent-filter>
@@ -28,21 +28,21 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Store"
+            android:name="pt.drawgeo.main.Store"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name=".MainMenuActivity"
+            android:name="pt.drawgeo.main.MainMenuActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
          <activity
-            android:name=".OptionsActivity"
+            android:name="pt.drawgeo.main.OptionsActivity"
             android:label="@string/app_name" >
         </activity>
          <activity
-            android:name=".MapsActivity"
+            android:name="pt.drawgeo.map.MapsActivity"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
