--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -9,10 +9,11 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
       
-    <application>
-    	<uses-library android:name="com.google.android.maps" />
+    <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
+        <uses-library android:name="com.google.android.maps" />
         <activity
             android:name="pt.drawgeo.main.CanvasActivity"
             android:label="@string/app_name" >
