--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -38,6 +38,11 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
+        <activity 
+            android:name="pt.drawgeo.map.NewChallenge"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
         <activity
             android:name="pt.drawgeo.main.MainMenuActivity"
             android:label="@string/app_name"
