--- a/Android/AndroidManifest.xml
+++ b/Android/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
+        
         <activity
             android:name="pt.drawgeo.main.HomeActivity"
             android:label="@string/app_name"
@@ -40,6 +41,11 @@
         </activity>
         <activity 
             android:name="pt.drawgeo.map.NewChallenge"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>
+        <activity 
+            android:name="pt.drawgeo.map.GuessChallenge"
             android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
