bug fixe do mapa

--- a/Android/.settings/org.eclipse.core.resources.prefs
+++ b/Android/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/pt/drawgeo/main/HomeActivity.java=UTF-8
 encoding//src/pt/drawgeo/map/MapsActivity.java=UTF-8
